--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.02MB/s(Youtube:不良林), server: 85.208.108.94, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-170.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-984.7KB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-2.15MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇯🇵 日本-1.84MB/s(Youtube:不良林), server: 85.208.108.94, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 塞浦路斯-410.8KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇫🇷 法国-1.50MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-2.02MB/s(Youtube:不良林) 2, server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.74MB/s(Youtube:不良林), server: 85.208.108.94, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-1.52MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-3.32MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-2.12MB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-1.84MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇭🇰 香港-2.22MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
   - {name: 🇺🇸 美国-973.5KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-874.8KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-170.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-984.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 塞浦路斯-410.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-170.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-984.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 塞浦路斯-410.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-170.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-984.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 塞浦路斯-410.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-170.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-984.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 塞浦路斯-410.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-170.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-984.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 塞浦路斯-410.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-170.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-984.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 塞浦路斯-410.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-170.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-984.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 塞浦路斯-410.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
