--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.74MB/s(Youtube:不良林), server: 85.208.108.94, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-1.52MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇯🇵 日本-3.32MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-2.12MB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-1.84MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇭🇰 香港-2.22MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇺🇸 美国-973.5KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.62MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.65MB/s(Youtube:不良林), server: 85.208.108.94, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-2.02MB/s(Youtube:不良林), server: 85.208.108.94, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.03MB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-874.8KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇭🇰 香港-3.09MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-973.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
