--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.32MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-1.62MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.65MB/s(Youtube:不良林), server: 85.208.108.94, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-2.02MB/s(Youtube:不良林), server: 85.208.108.94, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.03MB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-3.31MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.32MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-3.11MB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-1.86MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇯🇵 日本-874.8KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇭🇰 香港-3.09MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
   - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-988.8KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-988.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-988.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-988.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-988.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-988.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-988.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-988.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
